[Feature #1577747780] Add font-awesome and google fonts

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -6,6 +6,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/main.js"></script>
 </head>
 <title>
@@ -16,11 +17,14 @@
         <nav class="nav-bar">
             <ul>
                 <li><a href="#">Maintenance Tracker</a></li>
-                <li><a  href="index.html">Home</a></li>
+                <li><a  href="index.html"><i class="fa fa-home"></i>
+                    Home</a></li>
                 <div class="nav-bar-right">
                     <ul>
-                        <li><a href="signup.html">Sign Up</a></li>
-                        <li><a class="active" href="signin.html">Sign In</a></li>
+                        <li><a href="signup.html"><i class="fa fa-plug"></i>
+                            Sign Up</a></li>
+                        <li><a class="active" href="signin.html"><i class="fa fa-lock"></i>
+                            Sign In</a></li>
                     </ul>
                 </div>
             </ul>
