--- a/UI/index.html
+++ b/UI/index.html
@@ -6,6 +6,8 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
     <script src="js/main.js"></script>
 </head>
 <title>
@@ -13,18 +15,38 @@
 </title>
 <body>
     <header>
+        <div class="flex-container banner ">
+            <h1>Maintenance Tracker</h1>
+        </div>
         <nav class="nav-bar">
             <ul>
                 <li><a href="#">Maintenance Tracker</a></li>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a class="active" href="index.html"><i class="fa fa-home"></i>
+                    Home</a></li>
                 <div class="nav-bar-right">
                     <ul>
-                        <li><a href="signup.html">Sign Up</a></li>
-                        <li><a href="signin.html">Sign In</a></li>
+                        <li><a href="signup.html"> <i class="fa fa-plug"></i>
+                            Sign Up</a></li>
+                        <li><a href="signin.html"><i class="fa fa-lock"></i>
+                            Sign In</a></li>
                     </ul>
                 </div>
             </ul>
         </nav>
     </header>
+    <section>
+        <div class="flex-container">
+            <div>
+                <h4>Welcome to Maintenance Tracker</h4>
+                <h6> The repairs and Maintenance team</h6>
+                <p>Here you make arequest, if it is worthy of our effort, it will be approved and resolved in a gist.</p>
+            </div>
+        </div>
+    </section>
+   
+    
+    <footer class="flex-container footer">
+        <P>Don't fear the Dog, Fear the owner</P>
+    </footer>
 </body>
 </html> 
