[Feature #1577747780] Complete landing page Add background images Match colors Remove unnecessary sections

--- a/UI/index.html
+++ b/UI/index.html
@@ -34,15 +34,15 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <!-- <section> -->
         <div class="flex-container">
             <div>
-                <h4>Welcome to Maintenance Tracker</h4>
-                <h6> The repairs and Maintenance team</h6>
+                <h3>Welcome to Maintenance Tracker</h3>
+                <h4> The repairs and Maintenance team</h4>
                 <p>Here you make arequest, if it is worthy of our effort, it will be approved and resolved in a gist.</p>
             </div>
         </div>
-    </section>
+    <!-- </section> -->
    
     
     <footer class="flex-container footer">
