--- a/UI/signup.html
+++ b/UI/signup.html
@@ -58,10 +58,12 @@
                 </div> 
                 <div class="form-input">
                     <input type="password" id="firstname" placeholder=" Enter Password">
-                </div>
-                <input type="submit" value="Submit">              
+                </div><br>
+               <p style="float:left;">Already a member? <a href="signin.html">sign in</a></p>
+                <input type="submit" value="Submit">           
 
            </form>
+           
         </div>
     <!-- </section> -->
    
