--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -13,19 +13,19 @@
 <body>
     <header>
         
-        <nav class="nav-bar">
+        <nav class="nav-barr">
             <ul>
                 <li><a href="#">Maintenance Tracker</a></li>
-                <div class="nav-bar-center">
+                <div class="nav-barr-center">
                     <li><a class="active" href="user-dashboard.html"><i class="fa fa-cloud"></i>
                         Dashboard </a></li>
                 </div>
                 
-                <div class="nav-bar-right">
+                <div class="nav-bar-rright">
                     <ul>
                         <!-- <li><a  href="signup.html"> <i class="fa fa-plug"></i>
                             Sign Up</a></li> -->
-                        <li><a class="active" href="logout.html"><i class="fa fa-plug"></i>
+                        <li><a  href="index.html"><i class="fa fa-plug"></i>
                             log out</a></li>
                     </ul>
                 </div>
