[feature #157770466]Add new request form

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" type="image/gif" href="animated_favicon1.gif">
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -24,7 +26,7 @@
                     <ul>
                         <li><a  href="signup.html"> <i class="fa fa-plug"></i>
                             Sign Up</a></li>
-                        <li><a class="active" href="signin.html"><i class="fa fa-lock"></i>
+                        <li><a class="active" href="user-dashboard.html"><i class="fa fa-lock"></i>
                             Sign In</a></li>
                     </ul>
                 </div>
@@ -49,8 +51,8 @@
                 </div>
                 <input type="checkbox" name="remember" value="remember"> Remember me 
                 <br>
-               <p style="float:left;">New member? <a href="signup.html">sign in</a></p>
-                <input type="submit" value="Submit">           
+               <p style="float:left;">New member? <a href="signup.html">sign up</a></p>
+                <input  type="submit"  value="Submit">           
 
            </form>
            
