[feature #157770466]complete new request form

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -41,13 +41,13 @@
                     <label for="email"> Email</label>
                 </div> 
                 <div class="form-input">
-                    <input type="email"  id="email" placeholder=" Enter Email">
+                    <input type="email"  id="email" placeholder=" Enter Email" required>
                 </div>
                 <div class="form-label">
                     <label for="pasword"> Password</label>
                 </div> 
                 <div class="form-input">
-                    <input type="password" id="firstname" placeholder=" Enter Password">
+                    <input type="password" id="firstname" placeholder=" Enter Password" required>
                 </div>
                 <input type="checkbox" name="remember" value="remember"> Remember me 
                 <br>
