--- a/UI/signup.html
+++ b/UI/signup.html
@@ -40,25 +40,25 @@
                    <label for="firstname"> First name</label>
                </div> 
                <div class="form-input">
-                   <input type="text" id="firstname" placeholder=" Enter firstname">
+                   <input type="text" id="firstname" placeholder=" Enter firstname" required>
                </div>
                <div class="form-label">
                     <label for="lastname"> Last name</label>
                 </div> 
                 <div class="form-input">
-                    <input type="text" id="lastname" placeholder=" Enter Lastname">
+                    <input type="text" id="lastname" placeholder=" Enter Lastname" required>
                 </div>
                 <div class="form-label">
                     <label for="email"> Email</label>
                 </div> 
                 <div class="form-input">
-                    <input type="email"  id="email" placeholder=" Enter Email">
+                    <input type="email"  id="email" placeholder=" Enter Email" required>
                 </div>
                 <div class="form-label">
                     <label for="pasword"> Password</label>
                 </div> 
                 <div class="form-input">
-                    <input type="password" id="firstname" placeholder=" Enter Password">
+                    <input type="password" id="firstname" placeholder=" Enter Password" required>
                 </div><br>
                <p style="float:left;">Already a member? <a href="signin.html">sign in</a></p>
                 <input type="submit" value="Submit">           
