--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -45,7 +45,7 @@
     <section class="main">
         <div class=" newreq" id="new">            
             <form action="">
-                <h4>New Request</h4>
+                <h4 id="h4">New Request</h4>
                 <div class="form-label">
                     <label for="category"> Category </label>
                 </div> 
