--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -33,11 +33,13 @@
     </header>
     <section>
         <div class="sidenav">
-            <a href="#new"><i class="fa fa-plus"></i> New Request</a>            
-            <a href="#sent"><<i class="fa fa-check"> Sent</a>
-            <a href="#approved"><i class="fa fa-check"><i class="fa fa-check"></i> Approved</a>
+            <a href="#new"><i class="fa fa-plus"></i> New Request</a>  
+            <a href="#all"><i class="fa fa-home"></i> All</a>          
+            <a href="#sent"><i class="fa fa-check"></i> Sent</a>
+            <a href="#approved"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
+            <a href="#resolved"><i class="fa fa-check"></i><i class="fa fa-check"></i>
+                <i class="fa fa-check"></i> Resolved</a>
             <a href="#rejected"><i class="fa fa-remove"></i> Rejected</a>
-            <a href="#resolved"> <i class="fa fa-check"><i class="fa fa-check"><i class="fa fa-check"></i>Resolved</a>
             <a href="#messages"> Messages</a>
         </div>
     </section>
@@ -83,7 +85,35 @@
             </form>
         </div>
         
+        <div class="flex-container sentreq" id="all">
+
+
+        </div>
         <div class="flex-container sentreq" id="sent">
+                <table id="customers">
+                        <tr>
+                          <th>Company</th>
+                          <th>Contact</th>
+                          <th>Country</th>
+                        </tr>
+                        <tr>
+                          <td>Alfreds Futterkiste</td>
+                          <td>Maria Anders</td>
+                          <td>Germany</td>
+                        </tr>
+                        
+                        taly</td>
+                        </tr>
+                        <tr>
+                          <td>North/South</td>
+                          <td>Simon Crowther</td>
+                          <td>UK</td>
+                        </tr>
+                        <tr>
+                          <td>Paris spécialités</td>
+                          <td>Marie Bertrand</td>
+                          <td>France</td>
+                        </tr>
 
         </div>
         <div class="flex-container approvedreq" id="approved">
