--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -61,6 +61,7 @@
                 </div> 
                 <div class="form-input">
                     <select name="freq" id="freq">
+                        <option value="once">Once</option>
                         <option value="daily">Daily</option>
                         <option value="Weekly">Weekly</option>
                         <option value="Monthly"> Monthly</option>
@@ -90,30 +91,99 @@
 
         </div>
         <div class="flex-container sentreq" id="sent">
-                <table id="customers">
-                        <tr>
-                          <th>Company</th>
-                          <th>Contact</th>
-                          <th>Country</th>
-                        </tr>
-                        <tr>
-                          <td>Alfreds Futterkiste</td>
-                          <td>Maria Anders</td>
-                          <td>Germany</td>
-                        </tr>
-                        
-                        taly</td>
-                        </tr>
-                        <tr>
-                          <td>North/South</td>
-                          <td>Simon Crowther</td>
-                          <td>UK</td>
-                        </tr>
-                        <tr>
-                          <td>Paris spécialités</td>
-                          <td>Marie Bertrand</td>
-                          <td>France</td>
-                        </tr>
+            <table id="sentitems">
+                <tr>
+                    <th>Category</th>
+                    <th>frequency</th>
+                    <th>title</th>
+                    <th>description</th>
+                    <th>date submited</th>
+                    
+                </tr>
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr>                                               
+                <tr>
+                    <td>Repair</td>
+                    <td>once</td>
+                    <td>Mouse broken</td>
+                    <td>You come do your thing </td>
+                    <td>1/4/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr>                                               
+                <tr>
+                    <td>Repair</td>
+                    <td>once</td>
+                    <td>forgot phone password</td>
+                    <td>I am stupid </td>
+                    <td>3/6/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr>                                               
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr>                                               
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                </tr> 
 
         </div>
         <div class="flex-container approvedreq" id="approved">
