--- a/UI/user-sent-requests.html
+++ b/UI/user-sent-requests.html
@@ -37,7 +37,7 @@
             <a href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
             <a href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
-            <a href="#messages"> Messages</a>
+            <a href="messages.html"> Messages</a>
         </div>
     </section>
     <section class="main">        
@@ -124,20 +124,8 @@
                     <td>12/6/2018</td>
                     <td>Pending</td>
                 </tr> 
-               
-        </div>
-        <div class="flex-container approvedreq" id="approved">
-
-        </div>
-        <div class="flex-container Pendingwreq" id="Pending">
-
-        </div>
-        <div class="flex-container resolvedreq" id="resolved">
-
-        </div>
-        <div class="flex-container msg" id="messages">
-
-        </div>
+            </table>   
+        </div>        
                  
     </section>
    
