[finishes #157770678]Add dates to the table

--- a/UI/user-resolved-request.html
+++ b/UI/user-resolved-request.html
@@ -45,11 +45,13 @@
             <table id="Resolveditems">
                 <tr >
                     <th class="purple">Category</th>
-                    <th class="purple">frequency</th>
-                    <th class="purple">title</th>
-                    <th class="purple">description</th>
-                    <th class="purple">date submited</th>
-                    <th class="purple">status</th>
+                    <th class="purple">Frequency</th>
+                    <th class="purple">Title</th>
+                    <th class="purple">Description</th>
+                    <th class="purple">Date submited</th>
+                    <th class="purple">Date approved</th>
+                    <th class="purple">Date resolved</th>
+                    <th class="purple">Status</th>
                     
                 </tr>
                 <tr>
@@ -57,6 +59,8 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr>                                               
@@ -66,13 +70,7 @@
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
-                    <td>Resolved</td>
-                </tr> 
-                <tr>
-                    <td>Maintenance</td>
-                    <td>Weekly</td>
-                    <td>Change generator oil</td>
-                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr> 
@@ -81,6 +79,18 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
+                    <td>Resolved</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr>                                               
@@ -90,13 +100,7 @@
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
-                    <td>Resolved</td>
-                </tr> 
-                <tr>
-                    <td>Maintenance</td>
-                    <td>Weekly</td>
-                    <td>Change generator oil</td>
-                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr> 
@@ -105,6 +109,18 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
+                    <td>Resolved</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr>                                               
@@ -114,6 +130,8 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr> 
                 <tr>
@@ -121,6 +139,8 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Resolved</td>
                 </tr> 
