--- a/UI/user-approved-request.html
+++ b/UI/user-approved-request.html
@@ -45,11 +45,12 @@
             <table id="approveditems">
                 <tr >
                     <th class="green">Category</th>
-                    <th class="green">frequency</th>
-                    <th class="green">title</th>
-                    <th class="green">description</th>
-                    <th class="green">date submited</th>
-                    <th class="green">status</th>
+                    <th class="green">Frequency</th>
+                    <th class="green">Title</th>
+                    <th class="green">Description</th>
+                    <th class="green">Date submited</th>
+                    <th class="green">Approved</th>
+                    <th class="green">Status</th>
                     
                 </tr>
                 <tr>
@@ -57,6 +58,7 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr>                                               
@@ -66,6 +68,7 @@
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
+                    <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr> 
                 <tr>
@@ -73,6 +76,7 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr> 
@@ -90,13 +94,6 @@
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
-                    <td>Approved</td>
-                </tr> 
-                <tr>
-                    <td>Maintenance</td>
-                    <td>Weekly</td>
-                    <td>Change generator oil</td>
-                    <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr> 
@@ -105,6 +102,16 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
+                    <td>12/6/2018</td>
+                    <td>Approved</td>
+                </tr> 
+                <tr>
+                    <td>Maintenance</td>
+                    <td>Weekly</td>
+                    <td>Change generator oil</td>
+                    <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr>                                               
@@ -114,6 +121,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
+                    <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr> 
                 <tr>
@@ -121,6 +129,7 @@
                     <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
+                    <td>12/6/2018</td>
                     <td>12/6/2018</td>
                     <td>Approved</td>
                 </tr> 
