[finishes #157880661]Add rejected request table and style

--- a/UI/user-rejected-requests.html
+++ b/UI/user-rejected-requests.html
@@ -31,12 +31,12 @@
     <section >
         <div class="sidenav">
             <a href="user-new-request.html"> <i class="fa fa-plus"></i> New Request</a>  
-            <a   href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
-            <a class="active" href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
+            <a  href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
+            <a href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
             <a href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
-            <a href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
+            <a class="red" href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
             <a href="messages.html"> Messages</a>
         </div>
     </section>
@@ -44,85 +44,75 @@
         <div class="flex-container sentreq" id="sent">
             <table id="sentitems">
                 <tr>
-                    <th>Category</th>
-                    <th>frequency</th>
-                    <th>title</th>
-                    <th>description</th>
-                    <th>date submited</th>
-                    <th>status</th>
+                    <th class="red">Category</th>
+                    <th class="red" >Title</th>
+                    <th class="red" >Description</th>
+                    <th class="red" >Date submited</th>
+                    <th class="red" >Status</th>
                     
                 </tr>
                 <tr>
-                    <td>Maintenance</td>
-                    <td>Weekly</td>
+                    <td>Maintenance</td>                   
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr>                                               
                 <tr>
-                    <td>Repair</td>
-                    <td>once</td>
+                    <td>Repair</td>                    
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr> 
                 <tr>
-                    <td>Maintenance</td>
-                    <td>Weekly</td>
+                    <td>Maintenance</td>                    
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
-                    <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
-                    <td>once</td>
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
-                    <td>pending</td>
+                    <td>Rejected</td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
-                    <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
-                    <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>pending</td>
+                    <td>Rejected</td>
                 </tr>                                               
                 <tr>
                     <td>Maintenance</td>
-                    <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
-                    <td>Weekly</td>
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Pending</td>
+                    <td>Rejected</td>
                 </tr> 
             </table>   
         </div>        
