--- a/UI/user-sent-requests.html
+++ b/UI/user-sent-requests.html
@@ -45,11 +45,11 @@
             <table id="sentitems">
                 <tr>
                     <th>Category</th>
-                    <th>frequency</th>
-                    <th>title</th>
-                    <th>description</th>
-                    <th>date submited</th>
-                    <th>status</th>
+                    <th>Frequency</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Date submited</th>
+                    <th>Status</th>
                     
                 </tr>
                 <tr>
