[feature #157767990] create admin dashboard side bar and all requests tab

--- a/UI/admin-dashboard.html
+++ b/UI/admin-dashboard.html
@@ -20,8 +20,9 @@
                     Dashboard </a></li>                              
             <div class="nav-bar-right">
                 <ul>
-                    <!-- <li><a  href="signup.html"> <i class="fa fa-plug"></i>
-                        Sign Up</a></li> -->
+                    <li><a  href="#"> <i class="fa fa-comment"></i></a></li>
+                    <li><a  href="#"> <i class="fa fa-user"></i>
+                        Admin</a></li>
                     <li><a  href="index.html"><i class="fa fa-plug"></i>
                         log out</a></li>
                 </ul>
@@ -33,10 +34,9 @@
             <a  class="active" href="#all"><i class="fa fa-home"></i> All</a>          
             <a href="admin-recieved-request.html"><i class="fa fa-check"></i> Received </a>
             <a href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
-            <a href="admin-reolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
-                <i class="fa fa-check"></i> Resolved</a>
-            <a href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
-            <a href="#messages"> Messages</a>
+            <a href="admin-reolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
+            <a href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a><br>
+            <a href="#messages"> <i class="fa fa-comment"></i>Messages</a>
         </div>
     </section>
     <section class="main">        
@@ -57,7 +57,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
