--- a/UI/admin-dashboard.html
+++ b/UI/admin-dashboard.html
@@ -65,7 +65,7 @@
                     <td>Mouse broken</td>
                     <td>You come do your thing </td>
                     <td>1/4/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -73,7 +73,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -81,7 +81,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Repair</td>
@@ -89,7 +89,7 @@
                     <td>forgot phone password</td>
                     <td>I am stupid </td>
                     <td>3/6/2018</td>
-                    <td>pending</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -97,7 +97,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Approved</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -105,7 +105,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>pending</td>
+                    <td><button type="button" class=" btn  blue"> Approved</button></td>
                 </tr>                                               
                 <tr>
                     <td>Maintenance</td>
@@ -113,7 +113,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Rejected</td>
+                    <td><button type="button" class=" btn green"> Approved</button></td>
                 </tr> 
                 <tr>
                     <td>Maintenance</td>
@@ -121,7 +121,7 @@
                     <td>Change generator oil</td>
                     <td>The generator oils is changed weekly to avoid clogging </td>
                     <td>12/6/2018</td>
-                    <td>Resolved</td>
+                    <td><button type="button" class=" btn red"> Rejected</button></td>
                 </tr> 
                
         </div>
