Add links to side nav  for dashboard and new req

--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -31,13 +31,13 @@
     <section >
         <div class="sidenav">
             <a href="user-new-request.html"> <i class="fa fa-plus"></i> New Request</a>  
-            <a  class="active" href="#all"><i class="fa fa-home"></i> All</a>          
-            <a href="#sent"><i class="fa fa-check"></i> Sent</a>
-            <a href="#approved"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
-            <a href="#resolved"><i class="fa fa-check"></i><i class="fa fa-check"></i>
+            <a   href="user-dashboard.html"><i class="fa fa-home"></i> All</a>          
+            <a  href="user-sent-requests.html"><i class="fa fa-check"></i> Sent</a>
+            <a c class="green" href="user-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
+            <a href="user-resolved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i>
                 <i class="fa fa-check"></i> Resolved</a>
-            <a href="#rejected"><i class="fa fa-remove"></i> Rejected</a>
-            <a href="#messages"> Messages</a>
+            <a href="user-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a>
+            <a href="messages.html"> Messages</a>
         </div>
     </section>
     <section class="main">        
