--- a/UI/admin-recieved-request.html
+++ b/UI/admin-recieved-request.html
@@ -32,7 +32,7 @@
     <section >
         <div class="sidenav">
             <a   href="#all"><i class="fa fa-home"></i> All</a>          
-            <a class="default" href="admin-recieved-request.html"><i class="fa fa-check"></i> Received </a>
+            <a class="default" href="admin-recieved-request.html"><i class="fa fa-check"></i> Pending </a>
             <a href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
             <a href="admin-reolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
             <a href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a><br>
