[finishes #157769973] add admin resolved requests table and style

--- a/UI/admin-recieved-request.html
+++ b/UI/admin-recieved-request.html
@@ -34,7 +34,7 @@
             <a   href="#all"><i class="fa fa-home"></i> All</a>          
             <a class="default" href="admin-recieved-request.html"><i class="fa fa-check"></i> Pending </a>
             <a href="admin-approved-request.html"><i class="fa fa-check"></i><i class="fa fa-check"></i> Approved</a>
-            <a href="admin-reolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
+            <a href="admin-resolved-requests.html"><i class="fa fa-check"></i><i class="fa fa-check"></i><i class="fa fa-check"></i> Resolved</a>
             <a href="admin-rejected-requests.html"><i class="fa fa-remove"></i> Rejected</a><br>
             <a href="#messages"> <i class="fa fa-comment"></i>Messages</a>
         </div>
